Corrigir janelas e colocar exceções e ataques em pacotes